<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MusicPlayer - by Andreas Lohninger</string>
    <string name="nav_header_subtitle">andreas.lohninger@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="cat_card_action_move_top_left" description="A description of an action that a user of an accessibility service can perform to move the card to the top left corner of the screen. [CHAR LIMIT=25]">Move to top left</string>
    <string name="cat_card_action_move_up" description="A description of an action that a user of an accessibility service can perform to swap the card with the one above it. [CHAR LIMIT=25]">Move Up</string>
    <string name="cat_card_action_move_down" description="A description of an action that a user of an accessibility service can perform to swap the card with the one below it. [CHAR LIMIT=25]">Move Down</string>
    <string name="cat_card_action_move_top_right" description="A description of an action that a user of an accessibility service can perform to move the card to the top right corner of the screen. [CHAR LIMIT=25]">Move to top right</string>
    <string name="cat_card_action_move_bottom_left" description="A description of an action that a user of an accessibility service can perform to move the card to the bottom left corner of the screen. [CHAR LIMIT=25]">Move to bottom left</string>
    <string name="cat_card_action_move_bottom_right" description="A description of an action that a user of an accessibility service can perform to move the card to the bottom right corner of the screen. [CHAR LIMIT=25]">Move to bottom right</string>
    <string name="cat_card_action_move_center" description="A description of an action that a user of an accessibility service can perform to move the card to the center of the screen. [CHAR LIMIT=25]">Move to center</string>

    <!-- MusicService Intent-Tags-->
    <string name="music_service_action_resume">MUSICSERVICE_ACTION_RESUME</string>
    <string name="music_service_action_pause">MUSICSERVICE_ACTION_PAUSE</string>
    <string name="intent_mediaplayer_play">MUSICPLAYER_PLAY</string>
    <string name="playback_control_values">PLAYBACK_CONTROL_VALUES</string>
    <string name="musicservice_song_prepared">MUSICSERVICE_SONG_PREPARED</string>
    <string name="musicservice_song_ended">MUSICSERVICE_SONG_ENDED</string>


    <!-- Notification Intent-Tags-->
    <string name="notification_action_pause">NOTIFICATION_ACTION_PAUSE</string>
    <string name="notification_action_play">NOTIFICATION_ACTION_PLAY</string>
    <string name="notification_action_next">NOTIFICATION_ACTION_NEXT</string>
    <string name="notification_action_previous">NOTIFICATION_ACTION_PREVIOUS</string>

    <!-- FragmentManager Tags -->
    <string name="fragment_expandedPlaybackControl">FRAGMENT_EXPANDEDPLAYBACKCONTROL</string>
    <string name="fragment_playbackControl">FRAGMENT_PLAYBACKCONTROL</string>
    <string name="fragment_playlist_detail">FRAGMENT_PLAYLIST_DETAIL</string>
    <string name="fragment_queue">FRAGMENT_QUEUE</string>

    <!-- Equalizer Fragment -->
    <string name="equalizer_presetSelectionHint">Preset</string>

    <!-- Reverb info text -->
    <string name="reverb_delay">Sets the time between the first reflection and the reverberation.</string>
    <string name="reverb_hflevel">Sets the volume level at 5 kHz relative to the volume level at low frequencies of the overall reverb effect. This controls a low-pass filter that will reduce the level of the high-frequency.</string>
    <string name="reverb_level">Sets the volume level of the late reverberation. This level is combined with the overall room level.</string>
    <string name="reflection_level">This parameter sets the level of the first group of echoes that occurs when sound waves hit walls, ceilings, etc. These reflections tend to be more defined and sound more like “echo” than “reverb.” Lowering the early reflections level also places the listener further back in the room, and more toward the middle.</string>
    <string name="reflection_delay">Simulates the amount of time it takes for a sound to leave its sound source and create a first reflection. Increase to give the feeling of a bigger space.</string>
    <string name="reflection_density">Lower densities give more space between the reverb’s first reflections and subsequent reflections. A lower density creates a hollow sound that is useful for simulating small reverberation spaces such as bathrooms.</string>
    <string name="reflection_diffusion">Increasing diffusion puts reflections closer together, thickening the sound. Reducing diffusion creates more discrete echoes. Sets the echo density in the late reverberation decay. The scale should approximately map linearly to the perceived change in reverberation.</string>
    <string name="decay_time">This determines how long it takes for the reflections in the room to run out of energy. Sets the time taken for the level of reverberation to decay by 60 dB.</string>
    <string name="decay_hfratio">With reverbs having separate decay times for high and low frequencies, this sets the decay of high frequencies. A longer high frequency decay gives a brighter, more ethereal type of reverb that can sound great on vocals as it adds more reverb to sibilants and fricatives, while minimizing reverb on plosives and lower vocal ranges. Sets the ratio of high frequency decay time (at 5 kHz) relative to the decay time at low frequencies.</string>
    <string name="reverb_master">Represents the size of the room where the reverb is created. Larger sizes typically correlate to longer reverb times, vary this parameter in conjunction with decay time for a smoother sound.
    Sets the master volume level of the environmental reverb effect.</string>

    <!-- Album Fragments -->
    <string name="transition_album_cover">TRANSITION_ALBUM_COVER</string>
    <string name="transition_album_name">TRANSITION_ALBUM_NAME</string>
    <string name="transition_album_size">TRANSITION_ALBUM_SIZE</string>
    <string name="transition_album_layout">TRANSITION_ALBUM_LAYOUT</string>

    <string name="transition_playback_layout">TRANSITION_PLAYBACK_LAYOUT</string>

    <!-- PlaybackControl -->
    <string name="transition_playback_title">TRANSITION_PLAYBACK_TITLE</string>
    <string name="preference_reverb_isenabled">PREFERENCE_REVERB_ISENABLED</string>

    <!-- SharedPreference Keys -->
    <string name="preference_equalizer_isenabled">PREFERENCE_EQUALIZER_ISENABLED</string>
    <string name="preference_bassboost_isenabled">PREFERENCE_BASSBOOST_ISENABLED</string>

    <string name="preference_bassboost_strength">PREFERENCE_BASSBOOST_STRENGTH</string>
    <string name="preference_virtualizer_isenabled">PREFERENCE_VIRTUALIZER_ISENABLED</string>

    <string name="preference_virtualizer_strength">PREFERENCE_VIRTUALIZER_STRENGTH</string>
    <string name="preference_loudnessenhancer_isenabled">PREFERENCE_LOUDNESSENHANCER_ISENABLED</string>

    <string name="preference_loudnessenhancer_strength">PREFERENCE_LOUDNESSENHANCER_STRENGTH</string>
    <string name="preference_dashboard_first_list_type">PREFERENCE_DASHBOARD_FIRST_LIST_TYPE</string>

    <string name="preference_dashboard_second_list_type">PREFERENCE_DASHBOARD_SECOND_LIST_TYPE</string>
    <string name="preference_dashboard_first_list_filter">PREFERENCE_DASHBOARD_FIRST_LIST_FILTER</string>

    <string name="preference_dashboard_second_list_filter">PREFERENCE_DASHBOARD_SECOND_LIST_FILTER</string>
    <string name="preference_dashboard_first_list_size">PREFERENCE_DASHBOARD_FIRST_LIST_SIZE</string>

    <string name="preference_dashboard_second_list_size">PREFERENCE_DASHBOARD_SECOND_LIST_SIZE</string>
    <string name="preference_songlist_filter_type">PREFERENCE_SONGLIST_FILTER_TYPE</string>

    <!-- Bundle keys -->
    <string name="parcelable_track_list">PARCELABLE_TRACK_LIST</string>

    <!-- Database Keys -->
    <string name="db_preference_include_from">INCLUDE_DURATION_FROM</string>
    <string name="db_preference_include_to">INCLUDE_DURATION_TO</string>

    <string-array name="AlbumOption">
        <item>Play</item>
        <item>Shuffle</item>
        <item>Add to queue</item>
    </string-array>
</resources>
